...
        title = title,
        leftSide = {
            Text(
                modifier = Modifier
                    .clickable(role = Role.Button) { onNavigateUp() }
                    .extraSmallPadding()
                    .testTag("flexibleAppBarLeft"),
                text = navigationButtonTitle,
                color = MaterialTheme.colorScheme.onSurface,
                style = MaterialTheme.typography.headlineSmall,
            )
        },
        rightSide = {
...
