...
                routesTabSelected && (item == ScreensForMarkersAndRoutes.Routes) ||
                !routesTabSelected  && (item == ScreensForMarkersAndRoutes.Markers)

            NavigationBarItem(
                modifier = Modifier
                    .mediumPadding()
                    .testTag(if(item == ScreensForMarkersAndRoutes.Routes)"RoutesTab" else "MarkersTab"),
                selected = isSelected,
                onClick = { setRoutesAndMarkersTab(item == ScreensForMarkersAndRoutes.Routes) },
                label = {
                    Text(
                        stringResource(item.title),
                        style = MaterialTheme.typography.bodyLarge,
...
